# colliderscope

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
colliderscope/: __init__.py  __main__.py  app.py  base.py  dag.py  data.py  distributions.py  plot.py  scatter.py  webui.py
docs/: environment.yml
docs/source/: api.rst  cli.rst  conf.py  index.rst
tests/: test_io.py
